--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <nav class="bottom-nav">
         <a href="#" class="nav-item"><span>🏠</span><span>Home</span></a>
         <a href="battles.html" class="nav-item"><span>🎮</span><span>Battles</span></a>
-        <a href="#" class="nav-item"><span>💼</span><span>Wallet</span></a>
+        <a href="wallet.html" class="nav-item"><span>💼</span><span>Wallet</span></a>
         <a href="#" class="nav-item"><span>👤</span><span>Profile</span></a>
       </nav>
     </section>
@@ -217,7 +217,7 @@
     <a href="#" class="menu-link history-link" data-type="match_history">Match History</a>
     <a href="#" class="menu-link history-link" data-type="deposit_history">Deposit History</a>
     <a href="#" class="menu-link history-link" data-type="withdraw_history">Withdraw History</a>
-    <a href="#" class="menu-link" data-route="wallet">Wallet</a>
+    <a href="wallet.html" class="menu-link" data-route="wallet">Wallet</a>
     <a href="#" class="menu-link" data-route="profile">Profile</a>
     <a href="#" class="menu-link" id="logoutBtn">Logout</a>
   </aside>
