--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <a href="#" class="menu-link history-link" data-type="deposit_history">Deposit History</a>
     <a href="#" class="menu-link history-link" data-type="withdraw_history">Withdraw History</a>
     <a href="wallet.html" class="menu-link" data-route="wallet">Wallet</a>
-    <a href="#" class="menu-link" data-route="profile">Profile</a>
+    <a href="profile.html" class="menu-link" data-route="profile">Profile</a>
     <a href="#" class="menu-link" id="logoutBtn">Logout</a>
   </aside>
   <div id="overlay" class="overlay"></div>
